suite modif password

--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -6,6 +6,13 @@
     <div class="container">
         <h1>Modifier mon mot de passe</h1>
         <a href="{{ path('account') }}">Retourner à mon compte</a>
+
+        <hr>
+        {% if notification %}
+            <div class="alert alert-info">{{ notification }}</div>
+        {% endif %}
+            {{ form(form) }}
+        <hr>
     </div>
 
 {% endblock %}
