--- a/templates/Frontend/home.html.twig
+++ b/templates/Frontend/home.html.twig
@@ -13,8 +13,14 @@
             <span class="text-muted">Aucun compte connecté</span>
         {% endif %}
         
-        
-        <h1>Homepage</h1>
+        <div class="row">
+            <h1 class="text-center mt-5">Bienvenue sur Leboncoin du Pauvre !</h1>
+            <div class="text-center mt-3">
+                <a href="/articles" class="btn btn-info">Découvrir les annonces</a>
+            </div>
+
+        </div>
+
     </div>
 {% endblock %}
 
