Ajout des questions aux articles + view articles on account page.

--- a/templates/Frontend/navbar.html.twig
+++ b/templates/Frontend/navbar.html.twig
@@ -17,7 +17,7 @@
                 </li>
             </ul>
 
-            {% if app.user %}
+            {% if is_granted('ROLE_USER') %}
                 <li class="nav-item m-2 list-unstyled">
                     <a class="btn btn-warning" href="{{ path('account') }}">Account</a>
                 </li>
