--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -14,31 +14,34 @@
                     <p class="text-muted">{{ article.createdAt|date('d-m-Y H:i') }}</p>
                     <span class="bg-info rounded p-1">{{ article.tags }}</span>
                     <p class="text-justify text-muted mt-2">{{ article.subtitle }}</p>
+                {{ dump(article) }}
                 </div>
 
             </div>
-            <div class="card mt-3 mb-4">
+            <div class="card mt-3 mb-4 p-2">
                 <h6>Description :</h6>
                 <p class="text-justify mt-2">{{ article.description }}</p>
             </div>
             <hr>
             <div class="card p-3">
                 <h4>Questions & Réponses :</h4>
-                <div class="card p-2">
                     {% for question in article.questions %}
-                        <div class="d-flex">
-                            <h5>{{ question.name }}</h5>
-                            <p class="text-muted ms-4">{{ question.taskAt|ago }}</p>
+                        <div class="card p-2 mb-3">
+                            <div class="d-flex">
+                                <h5>{{ question.name }}</h5>
+                                <p class="text-muted ms-4">{{ question.taskAt|ago }}</p>
+                            </div>
+
+                            <p>{{ question.question }}</p>
+
+                            {% if app.user.email == article.users.email %}
+                                <div class="form-floating mb-3">
+                                    <textarea class="form-control" placeholder="Répondre à {{ question.user.id }}" id="floatingTextarea"></textarea>
+                                    <label for="floatingTextarea">Répondre à {{ question.user.id }} </label>
+                                </div>
+                                <button class="col-md-2 mb-2 btn btn-primary">Répondre</button>
+                            {% endif %}
                         </div>
-
-                        <p>{{ question.question }}</p>
-                        {{ dump(question) }}
-
-
-{#                        {% if app.user.email == article.users.email %}#}
-{#                            <input type="text" placeholder="Votre réponse....">#}
-{#                            <button class="mb-2 btn-secondary">Envoyer</button>#}
-{#                        {% endif %}#}
                     {% endfor %}
                 </div>
             </div>
