ajout vote + user (lastname, firstname)

--- a/templates/account/articles.html.twig
+++ b/templates/account/articles.html.twig
@@ -19,6 +19,7 @@
                         <th scope="col">Price</th>
                         <th scope="col">Tags</th>
                         <th scope="col">Publish</th>
+                        <th scope="col">Actions</th>
                     </tr>
                     </thead>
                     <tbody>
