--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -14,7 +14,19 @@
                     <p class="text-muted">{{ article.createdAt|date('d-m-Y H:i') }}</p>
                     <span class="bg-info rounded p-1">{{ article.tags }}</span>
                     <p class="text-justify text-muted mt-2">{{ article.subtitle }}</p>
-                {{ dump(article) }}
+                    <p>Publié par : {{ article.users.lastname }} {{ article.users.firstname }}</p>
+
+                    <form action="{{ path('app_user_vote', { id: article.users.id }) }}" method="post">
+                        <button class="btn btn-success btn-sm" name="vote" value="up">Vote up</button>
+                        <button class="btn btn-warning btn-sm" name="vote" value="down">Vote down</button>
+
+                        {% if article.users.vote <= "0" %}
+                            <i class="fas fa-hand-middle-finger"></i>
+                        {% else %}
+                            <i class="fas fa-thumbs-up"></i>
+                        {% endif %}
+                        <span>{{ article.users.vote }}</span>
+                    </form>
                 </div>
 
             </div>
@@ -31,13 +43,14 @@
                                 <h5>{{ question.name }}</h5>
                                 <p class="text-muted ms-4">{{ question.taskAt|ago }}</p>
                             </div>
+                            <p class="text-muted">Écrit par : {{ question.user.lastname }} {{ question.user.firstname }}</p>
 
                             <p>{{ question.question }}</p>
 
                             {% if app.user.email == article.users.email %}
                                 <div class="form-floating mb-3">
                                     <textarea class="form-control" placeholder="Répondre à {{ question.user.id }}" id="floatingTextarea"></textarea>
-                                    <label for="floatingTextarea">Répondre à {{ question.user.id }} </label>
+                                    <label for="floatingTextarea">Répondre à {{ question.user.lastname }} {{ question.user.firstname }} </label>
                                 </div>
                                 <button class="col-md-2 mb-2 btn btn-primary">Répondre</button>
                             {% endif %}
