--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -55,15 +55,30 @@
                         <div class="card p-2 mb-3">
                             <div class="d-flex">
                                 <h5>{{ question.name }}</h5>
-                                <p class="text-muted ms-4">{{ question.taskAt|ago }}</p>
                             </div>
 
                             <div class="bg-warning p-2 rounded mb-2" style="--bs-bg-opacity: .5;">
-                                <p class="text-muted">Écrit par : {{ question.user.lastname }} {{ question.user.firstname }}</p>
+                                <div class="d-flex justify-content-between">
+                                    <div>
+                                        <p class="text-muted">Écrit par : {{ question.user.lastname }} {{ question.user.firstname }}</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-muted">{{ question.taskAt|ago }}</p>
+                                    </div>
+                                </div>
+
                                 <p class="text-black">{{ question.question }}</p>
                             </div>
                             {% for answer in question.answers %}
                                 <div class="bg-success p-2 rounded mb-2" style="--bs-bg-opacity: .5;">
+                                    <div class="d-flex justify-content-between">
+                                        <div>
+                                            <p class="text-muted">Écrit par : {{ answer.user.lastname }} {{ answer.user.firstname }}</p>
+                                        </div>
+                                        <div>
+                                            <p class="text-muted">{{ answer.answerAt|ago }}</p>
+                                        </div>
+                                    </div>
                                     <p class="text-black">{{ answer.content }}</p>
                                 </div>
                             {% endfor %}
@@ -71,12 +86,6 @@
 
                             {% if app.user.email == article.users.email %}
                                 <a class="btn btn-success btn-sm col-md-2" href="{{ path('app_answer', { slug: question.slug, id: question.id }) }}">Répondre</a>
-
-{#                                <div class="form-floating mb-3">#}
-{#                                    <textarea class="form-control" placeholder="Répondre à {{ question.user.id }}" id="floatingTextarea"></textarea>#}
-{#                                    <label for="floatingTextarea">Répondre à {{ question.user.lastname }} {{ question.user.firstname }} </label>#}
-{#                                </div>#}
-{#                                <button class="col-md-2 mb-2 btn btn-primary">Répondre</button>#}
                             {% endif %}
                         </div>
                     {% endfor %}
