--- a/templates/Frontend/navbar.html.twig
+++ b/templates/Frontend/navbar.html.twig
@@ -12,11 +12,13 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{{ path('articles') }}">Annonces</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('admin') }}">Admin</a>
-                </li>
             </ul>
 
+            {% if is_granted('ROLE_ADMIN') %}
+                <li class="nav-item list-unstyled">
+                    <a class="btn btn-info" aria-current="page" href="{{ path('admin') }}">Admin</a>
+                </li>
+            {% endif %}
             {% if is_granted('ROLE_USER') %}
                 <li class="nav-item m-2 list-unstyled">
                     <a class="btn btn-warning" href="{{ path('account') }}">Account</a>
