--- a/templates/account/articles.html.twig
+++ b/templates/account/articles.html.twig
@@ -4,8 +4,12 @@
 
 {% block body %}
     <div class="container">
-        <h1>Liste de mes articles</h1>
-
+        <div class="d-flex justify-content-between">
+            <h1>Liste de mes articles</h1>
+            <div class="mt-2">
+                <a class="btn btn-success" href="{{ path('account_article_new') }}"><i class="fas fa-plus"></i> Nouveau</a>
+            </div>
+        </div>
         {% for article in articles %}
             {% if app.user.email == article.users.email %}
                     <table class="table">
@@ -33,8 +37,11 @@
                             <td>{{ article.tags }}</td>
                             <td>{{ article.createdAt|date('d-m-Y H:i') }}</td>
                             <td>
-                                <a href="#" class="btn btn-warning btn-sm mb-2">Modifier</a>
-                                <a href="#" class="btn btn-danger btn-sm">Supprimer</a>
+                                <div class="d-flex mt-4">
+                                    <a href="{{ path('article', { 'slug': article.slug }) }}" class="text-primary me-3" target="_blank"><i class="far fa-eye"></i></a>
+                                    <a href="{{ path('app_account_article_edit', { slug: article.slug }) }}" class="text-success me-3"><i class="far fa-edit"></i></a>
+                                    <a href="{{ path('app_account_article_delete', { slug: article.slug, id: article.id }) }}" class="text-danger"><i class="far fa-trash-alt"></i></a>
+                                </div>
                             </td>
                         </tr>
                         </tbody>
